chapitre 7, correction formulations

--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -25,8 +25,11 @@ Cette vision de la modularité se rapproche plus de la vision biologique, dans l
 
 Nous pensons que cette approche modulaire est propice à faire émerger des nouveaux paradigmes d'apprentissage au sein d'architectures neuronales. 
 Le comportement global du système résulte en effet de l'interaction entre les modules et non seulement de la somme des comportements des modules pris individuellement~: il s'agit de systèmes complexes. 
-Des exemples de modèles artificiels ont exploré cette idée de modularité. Un exemple ancien en robotique autonome est l'architecture de \emph{sumsumption} de \cite{brooks_sumsumption_85}. Ces travaux construisent une architecture robotique composée de modules comportementaux simples, tels que \og marcher \fg{}, \og éviter un objet \fg{}, mais exploités en architecture par la présence de boucles de rétroaction. L'interaction de tous ces comportements de base permet au système de réagir de manière autonome à son environnement. 
-Dans cet exemple, les modules ont une structure préétablie.
+%Citons par exemple le jeu de la Vie \cite{Gardener1970MathematicalGT}
+% chen_modularity_2016 emergence et modularité.
+% \cite{Siebert2020RoleOM} : auto-organisation et modularité sont liées.
+Des exemples de modèles artificiels ont exploré cette idée de modularité. Un exemple en robotique autonome est l'architecture de \emph{sumsumption} de \cite{brooks_sumsumption_85}. Ces travaux construisent une architecture robotique composée de modules comportementaux simples, tels que \og marcher \fg{}, \og éviter un objet \fg{}, mais exploités en architecture par la présence de boucles de rétroaction. 
+L'interaction de tous ces comportements de base permet au système de réagir de manière autonome à son environnement. Dans cet exemple, les modules ont une structure préétablie.
 Nous centrons notre champ d'intérêt sur des architectures dont les modules sont a priori indifférenciés et interchangeables, et vont se spécialiser dans l'architecture au cours d'un l'apprentissage.
 En résumé, nous entendons par architecture modulaire d'apprentissage une architecture composée d'une multiplicité de sous-systèmes indifférenciés, interchangeables et évoluant dans le temps.
 Ils communiquent entre eux par une interface bien définie, et présentent des boucles de rétroaction, leur conférant un aspect dynamique. Cette interaction est traitée localement au sein des modules, sans supervision par un processus extérieur.
