--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -415,7 +415,7 @@
 }
 
 @inproceedings{baheux_towards_2014,
-  author     = {Baheux, D. and Fix, J. and Frezza-Buet, H.},
+  author     = {Baheux, Denis and Fix, Jérémy and Frezza-Buet, Hervé},
   title      = {Towards an effective multi-map self organizing recurrent neural network},
   booktitle  = {Proc. {ESANN}},
   year       = 2014,
@@ -436,7 +436,7 @@
 }
 
 @article{khouzam_2013,
-  author     = {Khouzam, B. and H.Frezza-Buet},
+  author     = {Bassem Khouzam and Hervé Frezza-Buet},
   title      = {Distributed recurrent self-organization for tracking the state of non-stationary partially observable dynamical systems},
   journal    = {Biologically Inspired Cognitive Architectures},
   year       = 2013,
@@ -474,7 +474,7 @@
   author     = {Buonamente, Miriam and Dindo, Haris and Johnsson, Magnus},
   title      = {Simulating Actions with the Associative Self-Organizing Map},
   booktitle  = {{AIC@AI*IA}},
-  year       = 2013,
+  year       = {2013},
 }
 
 @article{Harriger2012RichCO,
@@ -525,7 +525,7 @@
 }
 
 @article{Meunier2010ModularAH,
-  author     = {Meunier, D. and Lambiotte, R. and Bullmore, E.},
+  author     = {Meunier, David. and Lambiotte, Renaud and Bullmore, Edward},
   title      = {Modular and Hierarchically Modular Organization of Brain Networks},
   journal    = {Frontiers in Neuroscience},
   year       = 2010,
@@ -778,7 +778,7 @@
 }
 
 @inproceedings{barbalho_hierarchical_2001,
-  author     = {Barbalho, J.M. and Duarte, A. and Neto, D. and Costa, J.A.F. and Netto, M.L.A.},
+  author     = {Barbalho, Jose M. and Duarte, Adriao and Neto,  D{\'o}ria and Costa, Jose A.F. and Netto, M{\'a}rcio L.A.},
   title      = {Hierarchical {SOM} applied to image compression},
   booktitle  = {{IJCNN}'01. {International} {Joint} {Conference} on {Neural} {Networks}. {Proceedings} {({Cat}.} {{No}.{01CH37222})}},
   year       = 2001,
@@ -792,7 +792,7 @@
 
 @inproceedings{Costa2016ANS,
   title={A New Structured Self-Organizing Map with Dynamic Growth Applied to Image Compression},
-  author={Jos{\'e} Alfredo Ferreira Costa and Adri{\~a}o Duarte D{\'o}ria Neto and M{\'a}rcio Luiz De Andrade Netto},
+  author={Jos{\'e} A.F Costa and Adri{\~a}o Duarte and D{\'o}ria Neto and M{\'a}rcio L.A. Netto},
   year={2016},
   booktitle = {Proceedings of the VI Brazilian Conference on Neural Networks}
 }
@@ -1095,7 +1095,7 @@
 	doi = {10.1109/72.846732},
 	number = {3},
 	journal = {IEEE Transactions on Neural Networks},
-	author = {Alahakoon, D. and Halgamuge, S.K. and Srinivasan, B.},
+	author = {Alahakoon, Damminda and Halgamuge, Saman K. and Srinivasan, Bala},
 	year = {2000},
 	keywords = {Clustering algorithms, Humans, Data mining, Neural networks, Self organizing feature maps, Data analysis, Computer science, Unsupervised learning, Pattern analysis, Software engineering},
 }
@@ -1210,7 +1210,6 @@
 @incollection{henriques_spatial_2012,
 	title = {Spatial {Clustering} {Using} {Hierarchical} {SOM}},
 	language = {en},
-	urldate = {2022-10-04},
 	booktitle = {Applications of {Self}-{Organizing} {Maps}},
 	publisher = {InTech},
 	author = {Henriques, Roberto and Lobo, Victor and Bacao, Fernando},
@@ -1380,12 +1379,14 @@
   pages={454-458}
 }
 
-
-@inproceedings{Burnod1989AnAN,
-  title={An adaptive neural network - the cerebral cortex},
-  author={Yves Burnod},
-  year={1989}
+@book{Burnod1989AnAN,
+  title={An Adaptive Neural Network: The Cerebral Cortex},
+  author={Burnod, Yves},
+  series={Biologie th{\'e}orique},
+  year={1989},
+  publisher={Masson}
 }
+
 
 @article{AyresTheCR,
   title={The Correlation Ratio},
@@ -1699,7 +1700,7 @@
 
 @article{Fix2011ADN,
   title={A Dynamic Neural Field Approach to the Covert and Overt Deployment of Spatial Attention},
-  author={Jeremy David Fix and Nicolas P. Rougier and Fr{\'e}d{\'e}ric Alexandre},
+  author={Jeremy Fix and Nicolas Rougier and Fr{\'e}d{\'e}ric Alexandre},
   journal={Cognitive Computation},
   year={2011},
   volume={3},
@@ -1796,7 +1797,7 @@
 
   @article{Meunier2009HierarchicalMI,
   title={Hierarchical Modularity in Human Brain Functional Networks},
-  author={David Meunier and Renaud Lambiotte and Alex Fornito and Karen D. Ersche and Edward T. Bullmore},
+  author={David Meunier and Renaud Lambiotte and Alex Fornito and Karen D. Ersche and Edward Bullmore},
   journal={Frontiers in Neuroinformatics},
   year={2009},
   volume={3}
@@ -1820,7 +1821,7 @@
 
 @article{Bassett2017NetworkN,
   title={Network neuroscience},
-  author={Danielle S. Bassett and Olaf Sporns},
+  author={Bassett, Danielle S. and Sporns, Olaf},
   journal={Nature Neuroscience},
   year={2017},
   volume={20},
@@ -1833,7 +1834,7 @@
 	volume = {160},
 	issn = {1053-8119},
 	url = {https://www.sciencedirect.com/science/article/pii/S1053811916306152},
-	doi = {https://doi.org/10.1016/j.neuroimage.2016.11.006},
+	doi = {10.1016/j.neuroimage.2016.11.006},
 	abstract = {The network architecture of the human brain has become a feature of increasing interest to the neuroscientific community, largely because of its potential to illuminate human cognition, its variation over development and aging, and its alteration in disease or injury. Traditional tools and approaches to study this architecture have largely focused on single scales—of topology, time, and space. Expanding beyond this narrow view, we focus this review on pertinent questions and novel methodological advances for the multi-scale brain. We separate our exposition into content related to multi-scale topological structure, multi-scale temporal structure, and multi-scale spatial structure. In each case, we recount empirical evidence for such structures, survey network-based methodological approaches to reveal these structures, and outline current frontiers and open questions. Although predominantly peppered with examples from human neuroimaging, we hope that this account will offer an accessible guide to any neuroscientist aiming to measure, characterize, and understand the full richness of the brain's multiscale network structure—irrespective of species, imaging modality, or spatial resolution.},
 	journal = {NeuroImage},
 	author = {Betzel, Richard F. and Bassett, Danielle S.},
@@ -1934,8 +1935,7 @@
   date = {2002},
 	language = {en},
 	author = {Oja, Merja and Kaski, Samuel and Kohonen, Teuvo},
-	pages = {156},
-	file = {Oja et al. - Bibliography of Self-Organizing Map (SOM) Papers .pdf:/home/noemie/Zotero/storage/NERWXIE3/Oja et al. - Bibliography of Self-Organizing Map (SOM) Papers .pdf:application/pdf},
+	pages = {156}
 }
 
 @inproceedings{Kaski1998BibliographyOS,
@@ -1945,7 +1945,7 @@
 }
 
 @inproceedings{Honkela2009BIBLIOGRAPHYOS,
-  title={BIBLIOGRAPHY OF SELF-ORGANIZING MAP (SOM) PAPERS: 2002-2005 ADDENDUM},
+  title={Bibliography of {Self}-{Organizing} {Map} ({SOM}) {Papers}: 2002-2005 {Addendum}},
   author={Timo Honkela and Teuvo Kohonen},
   year={2009}
 }
