--- a/titlepage.tex
+++ b/titlepage.tex
@@ -7,12 +7,12 @@
 % Jury:
 % \President = {Le président &du jury}
 \Rapporteurs = {Frédéric Alexandre & Directeur de Recherche, INRIA Bordeaux Sud-Ouest \\
-    Madalina Olteanu & Professeur, Université Paris Dauphine, CEREMADE\\
+    Madalina Olteanu & Professeur, Université Paris Dauphine PSL\\
 \\}
 \Examinateurs = {
-    Lydia Boudjeloud-Assala & Maîtresse de conférence, Université de Lorraine, LORIA \\
-    Mathias Quoy & Professeur, CY-Université Cergy, Ensea, ETIS\\
+    Lydia Boudjeloud-Assala & Maîtresse de conférence, Université de Lorraine\\
+    Mathias Quoy & Professeur, CY-Université Cergy \\
 }
-\Directeur = {Hervé Frezza-Buet & Professeur à CentraleSupelec Metz, LORIA}
-\CoDirecteur = {Yann Boniface & Maître de conférence, Université de Lorraine, LORIA}
+\Directeur = {Hervé Frezza-Buet & Professeur à CentraleSupélec}
+\CoDirecteur = {Yann Boniface & Maître de conférence, Université de Lorraine}
 \MakeThesisTitlePage
